# fast-sentence-transformers

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg  test.py
.github/workflows/: python-package.yml
fast_sentence_transformers/: FastSentenceTransformer.py  __init__.py  dataclasses.py  fast_sentence_transformers.py
fast_sentence_transformers/examples/: test_basic.py  test_quantize.py
fast_sentence_transformers/txtai/: __init__.py
fast_sentence_transformers/txtai/models/: __init__py  models.py  onnx.py  pooling.py  registry.py
fast_sentence_transformers/txtai/pipeline/: __init__.py  hfpipeline.py  tensors.py
fast_sentence_transformers/txtai/pipeline/train/: __init__.py  hfonnx.py
fast_sentence_transformers/txtai/text/: __init__.py  labels.py
tests/: test_configs.py  test_standalone.py
